<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel"
    android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bracket"
        android:text="["
        android:textColor="#ff000000"
        android:textSize="60sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ann_press_loss"
        android:layout_toRightOf="@id/bracket"
        android:layout_toEndOf="@id/bracket"
        android:textColor="#ff000000"
        android:textCursorDrawable="@null"
        android:hint="@string/annular_pressure_loss"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="numberDecimal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/psi"
        android:text="@string/bar"
        android:textColor="#ff000000"
        android:layout_toRightOf="@id/ann_press_loss"
        android:layout_toEndOf="@id/ann_press_loss"
        android:layout_alignBaseline="@id/ann_press_loss"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:id="@+id/horizontal_line"
        android:layout_alignLeft="@id/ann_press_loss"
        android:layout_alignStart="@id/ann_press_loss"
        android:layout_alignEnd="@id/constant"
        android:layout_alignRight="@id/constant"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="#000000"
        android:layout_below="@id/ann_press_loss"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvd"
        android:layout_below="@id/horizontal_line"
        android:layout_alignLeft="@id/ann_press_loss"
        android:layout_alignStart="@id/ann_press_loss"
        android:textColor="#ff000000"
        android:textCursorDrawable="@null"
        android:hint="@string/tvd"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="numberDecimal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ft"
        android:text="@string/m"
        android:textColor="#ff000000"
        android:layout_toRightOf="@id/tvd"
        android:layout_toEndOf="@id/tvd"
        android:layout_alignBaseline="@id/tvd"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiply"
        android:textColor="#ff000000"
        android:text="×"
        android:layout_alignBaseline="@id/ann_press_loss"
        android:layout_toRightOf="@id/psi"
        android:layout_toEndOf="@id/psi"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/constant"
        android:textColor="#ff000000"
        android:text="@string/constant_102"
        android:layout_alignBaseline="@id/ann_press_loss"
        android:layout_toRightOf="@id/multiply"
        android:layout_toEndOf="@id/multiply"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="]"
        android:textColor="#ff000000"
        android:layout_toRightOf="@id/constant"
        android:layout_toEndOf="@id/constant"
        android:textSize="60sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plus"
        android:textColor="#ff000000"
        android:text="+"
        android:layout_alignBaseline="@+id/mud_density"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mud_density"
        android:layout_below="@id/tvd"
        android:layout_toRightOf="@id/plus"
        android:layout_toEndOf="@id/plus"
        android:textColor="#ff000000"
        android:textCursorDrawable="@null"
        android:hint="@string/mud_density"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="numberDecimal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ppg"
        android:text="@string/kg_L"
        android:textColor="#ff000000"
        android:layout_toRightOf="@id/mud_density"
        android:layout_toEndOf="@id/mud_density"
        android:layout_alignBaseline="@id/mud_density"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/equals"
        android:text="="
        android:textColor="#ff000000"
        android:layout_alignBaseline="@+id/answer"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/answer"
        android:text="@string/answer"
        android:layout_toRightOf="@id/equals"
        android:layout_toEndOf="@id/equals"
        android:layout_below="@id/mud_density"
        android:textColor="#ff000000"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>
    </ScrollView>