<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pump_output"
            android:textColor="#ff000000"
            android:textCursorDrawable="@null"
            android:hint="@string/pump_output"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bbl_min"
            android:text="@string/L_min"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/pump_output"
            android:layout_toEndOf="@id/pump_output"
            android:layout_alignBaseline="@id/pump_output"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divide"
            android:textColor="#ff000000"
            android:text="÷"
            android:layout_alignBaseline="@id/pump_output"
            android:layout_toRightOf="@id/bbl_min"
            android:layout_toEndOf="@id/bbl_min"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/annular_capacity"
            android:layout_below="@id/pump_output"
            android:textColor="#ff000000"
            android:textCursorDrawable="@null"
            android:hint="@string/annular_capacity"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bbl_ft"
            android:text="@string/L_m"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/annular_capacity"
            android:layout_toEndOf="@id/annular_capacity"
            android:layout_alignBaseline="@id/annular_capacity"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/equals"
            android:text="="
            android:textColor="#ff000000"
            android:layout_alignBaseline="@+id/answer"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/answer"
            android:text="@string/answer"
            android:layout_toRightOf="@id/equals"
            android:layout_toEndOf="@id/equals"
            android:layout_below="@id/annular_capacity"
            android:textColor="#ff000000"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>