<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/rel">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_1"
            android:textColor="#ff000000"
            android:textCursorDrawable="@null"
            android:hint="@string/length_of_collars"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ft"
            android:text="@string/m"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/edit_text_1"
            android:layout_toEndOf="@id/edit_text_1"
            android:layout_alignBaseline="@id/edit_text_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/multiply"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#ff000000"
            android:text="×"
            android:layout_alignBaseline="@+id/edit_text_2"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_2"
            android:layout_toRightOf="@id/multiply"
            android:layout_toEndOf="@id/multiply"
            android:textColor="#ff000000"
            android:textCursorDrawable="@null"
            android:hint="@string/metal_displacement_of_collars"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@id/edit_text_1"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bbl_ft"
            android:text="@string/m3_m"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/edit_text_2"
            android:layout_toEndOf="@id/edit_text_2"
            android:layout_alignBaseline="@id/edit_text_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/divide"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="#ff000000"
            android:text="÷"
            android:layout_alignBaseline="@+id/edit_text_3"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_3"
            android:layout_toRightOf="@id/divide"
            android:layout_toEndOf="@id/divide"
            android:textColor="#ff000000"
            android:textCursorDrawable="@null"
            android:hint="@string/riser_or_casing_capacity"
            android:textColorHint="@android:color/darker_gray"
            android:layout_below="@id/edit_text_2"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bbl_ft_1"
            android:text="@string/m3_m"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/edit_text_3"
            android:layout_toEndOf="@id/edit_text_3"
            android:layout_alignBaseline="@id/edit_text_3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/equals"
            android:text="="
            android:textColor="#ff000000"
            android:layout_alignBaseline="@+id/answer"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/answer"
            android:text="@string/answer"
            android:layout_toRightOf="@id/equals"
            android:layout_toEndOf="@id/equals"
            android:layout_below="@id/edit_text_3"
            android:textColor="#ff000000"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:textStyle="bold" />

</RelativeLayout>
    </ScrollView>